<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Instalador Eduroam</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_adicionar_eduroam">AdicionarEduroamActivity</string>
    <string name="title_activity_home">Inicial</string>
    <string name="label_button_adicionar">Adicionar Rede Wi-Fi</string>
    <string name="label_ssid">SSID da Rede</string>
    <string name="example_ssid">(eduroam, WIFI-INF)</string>
    <string name="label_user">Login Único</string>
    <string name="example_user">(xxxxxx@ufg.br)</string>
    <string name="label_password">Senha</string>
    <string name="label_button_conectar">Conectar</string>
    <string name="label_boas_vindas">Bem-vindo à Eduroam do Instituto de Informática da Universidade Federal de Goiás</string>
    <string name="lable_lembrar_senha">Lembrar Senha?</string>
    <string name="lable_exibir_senha">Exibir Senha</string>

    <!-- SharePreference TODO: verifica remoção -->
    <string name="prefs_ssid">prefs_ssid</string>
    <string name="prefs_ssid_default">"\"eduroam\""</string>
    <string name="prefs_usuario">prefs_usuario</string>
    <string name="prefs_senha">prefs_senha</string>

    <!-- Settings Preferencias do Usuario SSID -->
    <string name="pref_ssid_key">ssid</string>
    <string name="pref_ssid_label">SSID da Rede</string>
    <string name="pref_ssid_default">eduroam</string>

    <!-- Settings Preferencias do Usuario Salvar Senha -->
    <string name="pref_salvar_senha_key">salvar_senha</string>
    <string name="pref_salvar_senha_label">Salvar Senha?</string>
    <string name="pref_salvar_senha_default">true</string>

    <!-- Settings Preferencias do Usuario Pagina inicial -->
    <string name="pref_pagina_inicial_key">pagina_inicial</string>
    <string name="pref_pagina_inicial_label">Página Inicial</string>
    <string name="pref_pagina_inicial_default">http://www.inf.ufg.br/</string>

    <!-- Settings Preferencias do Usuario Abrir Browser Automatico na Pagina inicial -->
    <string name="pref_browser_auto_key">browser_auto</string>
    <string name="pref_browser_auto_label">Navegador Automático?</string>
    <string name="pref_browser_auto_default">true</string>

    <!-- TODO remover esta linha -->
    <string name="uri_site_inf">http://www.inf.ufg.br/</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_fragment_conta">Contas</string>
    <string name="title_dialog_fragment_conta_novo">Novo</string>
    <string name="title_dialog_fragment_conta_editar">Editar</string>

    <!--Ações do Menu Contexto para editar ou remover item da lista, usado na classe ContaListFragment.-->
    <string name="menu_action_edit">Editar</string>
    <string name="menu_action_delete">Excluir</string>

    <!--Ações do Menu do Toolbar.-->
    <string name="menu_action_new">Nova</string>
    <string name="menu_action_save">Salvar</string>

    <!--  Mensagem de Alerta -->
    <string name="message_campo_obrigatorio_login">Informe o login!</string>
    <string name="message_campo_obrigatorio_senha">Informe a senha!</string>



</resources>
