<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.ufg.inf.instaladoreduroam.AdicionarActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/label_ssid"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_ssid" />

        <EditText
            android:id="@+id/edit_ssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_ssid"
            android:hint="@string/example_ssid" />

        <TextView
            android:id="@+id/label_user"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_below="@id/edit_ssid"
            android:layout_marginTop="16dp"
            android:text="@string/label_user" />

        <EditText
            android:id="@+id/edit_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_user"
            android:hint="@string/example_user" />


        <TextView
            android:id="@+id/label_password"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_below="@id/edit_user"
            android:layout_marginTop="16dp"
            android:text="@string/label_password" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_password"
            android:password="true" />

        <CheckBox
            android:id="@+id/chck_lembrar_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_password"
            android:layout_marginTop="16dp"
            android:text="@string/lable_lembrar_senha" />

        <CheckBox
            android:id="@+id/chck_exibir_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_password"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@id/chck_lembrar_senha"
            android:text="@string/lable_exibir_senha" />

        <Button
            android:id="@+id/btn_conectar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/chck_lembrar_senha"
            android:layout_marginTop="16dp"
            android:text="@string/label_button_conectar" />

    </RelativeLayout>
</ScrollView>